--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@types/jspdf": "^1.3.3",
+    "@types/pdfjs-dist": "^2.10.377",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
